--- a/index.ipynb
+++ b/index.ipynb
@@ -80,8 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_term_derivative(term):((1,3),\n",
-    "    pass"
+    "def find_term_derivative(term):(1,3)\n",
+    "    pass "
    ]
   },
   {
