--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):(1,3)\n",
-    "    pass "
+    "    pass find_term_deri"
    ]
   },
   {
